--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -9,79 +9,59 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Email"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password"></label>
-                    <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="RememberMe">
-                            <input asp-for="RememberMe" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a asp-action="ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
-                if (loginProviders.Count == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in loginProviders)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
+<form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+    
 
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--4-col">
+            <div class="login-card login-card-google mdl-card mdl-shadow--2dp">
+                <div class="mdl-card__title mdl-card--expand">
+                    <h2 class="mdl-card__title-text">Google+</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    Login using your Google+ account here.
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                    <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" 
+                        name="provider" value="Google" title="Log in using your Google+ account">Login</button>
+                </div>
+            </div>
+        </div>
+        
+        <div class="mdl-cell mdl-cell--4-col">
+            <div class="login-card login-card-facebook mdl-card mdl-shadow--2dp">
+                <div class="mdl-card__title mdl-card--expand">
+                    <h2 class="mdl-card__title-text">Facebook</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    Login using your Facebook account here.
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                    <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" 
+                        name="provider" value="Facebook" title="Log in using your Facebook account">Login</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="mdl-cell mdl-cell--4-col">
+            <div class="login-card login-card-twitter mdl-card mdl-shadow--2dp">
+                <div class="mdl-card__title mdl-card--expand">
+                    <h2 class="mdl-card__title-text">Twitter</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    Login using your Twitter account here.
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                    <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" 
+                        name="provider" value="Twitter" title="Log in using your Twitter account">Login</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+</form>
+
+@section Scripts { 
+    @await Html.PartialAsync("_ValidationScriptsPartial") 
 }
