--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -39,6 +39,25 @@
   color: white;
 }
 
+.login-card.mdl-card {
+  width: 320px;
+  height: 320px;
+}
+.login-card > .mdl-card__title {
+  color: #fff;
+  text-shadow: 1px 1px gray;
+  background: #46B6AC;
+}
+.login-card-google > .mdl-card__title {
+    background: url('/images/google-login.png') center / cover;
+}
+.login-card-facebook > .mdl-card__title {
+    background: url('/images/facebook-login.jpg') center / cover;
+}
+.login-card-twitter > .mdl-card__title {
+    background: url('/images/twitter-login.jpg') center / cover;
+}
+
 .section-header {
     text-align: center;
     color: white;
