--- a/Views/Account/ExternalLogin.cshtml
+++ b/Views/Account/ExternalLogin.cshtml
@@ -7,22 +7,32 @@
 <h4>Associate your @ViewData["LoginProvider"] account.</h4>
 <hr />
 
-<p class="text-info">
-    You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
-</p>
-
-<div class="row">
-    <div class="col-md-4">
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col">
         <form asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+
+            <div class="login-card login-card-@(ViewData["LoginProvider"].ToLower()) mdl-card mdl-shadow--2dp">
+                <div class="mdl-card__title mdl-card--expand">
+                    <h2 class="mdl-card__title-text">@ViewData["LoginProvider"]</h2>
+                </div>
+                <div class="mdl-card__supporting-text">
+                    You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
+                    Please enter an email address for this site below and click the Register button to finish
+                    logging in.
+                </div>
+                <div class="mdl-card__actions mdl-card--border">
+                    <div class="mdl-textfield mdl-js-textfield">
+                        <input asp-for="Email" class="mdl-textfield__input" type="email">
+                        <label asp-for="Email" class="mdl-textfield__label"></label>
+                        <span asp-validation-for="Email" class="mdl-textfield__error"></span>
+                    </div>
+
+                    <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                        Register
+                    </button>
+                </div>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
 </div>
