--- a/Views/Account/ExternalLogin.cshtml
+++ b/Views/Account/ExternalLogin.cshtml
@@ -12,7 +12,7 @@
         <form asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
 
-            <div class="login-card login-card-@(ViewData["LoginProvider"].ToLower()) mdl-card mdl-shadow--2dp">
+            <div class="login-card login-card-@(ViewData["LoginProvider"].ToString().ToLower()) mdl-card mdl-shadow--2dp">
                 <div class="mdl-card__title mdl-card--expand">
                     <h2 class="mdl-card__title-text">@ViewData["LoginProvider"]</h2>
                 </div>
