Updated section header layout.

--- a/Views/Account/ExternalLogin.cshtml
+++ b/Views/Account/ExternalLogin.cshtml
@@ -3,9 +3,13 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Associate your @ViewData["LoginProvider"] account.</h4>
-<hr />
+<div class="section-header">
+    <h1>@ViewData["Title"]</h1>
+
+    <div style="margin-top: 10px; font-size: 36px;">
+        Associate your @ViewData["LoginProvider"] account.
+    </div>
+</div>
 
 <div class="mdl-grid">
     <div class="mdl-cell mdl-cell--4-col">
