--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -9,9 +9,13 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Login using one of the social network channel below.</h4>
-<hr />
+<div class="section-header">
+    <h1>@ViewData["Title"]</h1>
+
+    <div style="margin-top: 10px; font-size: 36px;">
+        Login using one of the social network channel below.
+    </div>
+</div>
 
 <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
     
@@ -20,10 +24,10 @@
         <div class="mdl-cell mdl-cell--4-col">
             <div class="login-card login-card-google mdl-card mdl-shadow--2dp">
                 <div class="mdl-card__title mdl-card--expand">
-                    <h2 class="mdl-card__title-text">Google+</h2>
+                    <h2 class="mdl-card__title-text">Google</h2>
                 </div>
                 <div class="mdl-card__supporting-text">
-                    Login using your Google+ account here.
+                    Login using your Google account here.
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
                     <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" 
