--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -6,11 +6,10 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
+    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm">
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-            <a class="" asp-area="" asp-controller="Account" asp-action="Login">Log in</a>
-            <button type="submit" class="btn btn-link mdl-navigation__link">Log out</button>
+            <a class="mdl-navigation__link" onclick="$('#logoutForm').submit();">Log out</button>
         </nav>
     </form>
 }
