--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
-﻿@{ ViewData["Title"] = "Home Page"; }
+﻿@model FileUploadViewModel
+
+@using Seayo.Models.FileViewModels;
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+
+@{ ViewData["Title"] = "Home Page"; }
 
 <div class="section-header">
     <h1>Seayo</h1>
@@ -9,24 +13,52 @@
     <div style="margin-top: 10px; font-size: 36px;">
         Upload and Compress Your Pictures
     </div>
-
-    @if (ViewBag.ActionMessage != null) {
-        <span class="mdl-chip mdl-chip--contact">
-            <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white"><i class="fa fa-check"></i></span>
-            <span class="mdl-chip__text">@ViewBag.ActionMessage</span>
-        </span>
-    }
-
-    @if (SignInManager.IsSignedIn(User))
-    {
-        using (Html.BeginForm("UploadFile", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            <span>File</span>
-            @Html.TextBoxFor(m => m.File, new { type = "file" })
-
-            <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                Save
-            </button>
-        }
-    }
 </div>
+
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="feature-card feature-card-image-upload mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand">
+            <h2 class="mdl-card__title-text">Image</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+            Please upload your image (JPG and PNG format only).
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+            @using (Html.BeginForm("UploadFile", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
+
+                @Html.TextBoxFor(m => m.File, new { type = "file" })
+                @Html.ValidationMessageFor(m => m.File)
+
+                <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    Upload
+                </button>
+            }
+        </div>
+    </div>
+    
+}
+
+<div id="action-message-toast" class="mdl-js-snackbar mdl-snackbar">
+    <div class="mdl-snackbar__text"></div>
+    <button class="mdl-snackbar__action" type="button"></button>
+</div>
+
+@section Scripts{
+    @if (TempData["ActionMessage"] != null)
+    {
+        <script>
+            (function() {
+                'use strict';
+                var snackbarContainer = document.querySelector('#action-message-toast');
+                var data = { message: '@TempData["ActionMessage"]' };
+
+                setTimeout(function(){ snackbarContainer.MaterialSnackbar.showSnackbar(data); }, 100);
+                
+            }());
+        </script>
+    }
+
+}
