--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -22,48 +22,15 @@
 
     <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--4-col">
-            <div class="login-card login-card-google mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand">
-                    <h2 class="mdl-card__title-text">Google</h2>
-                </div>
-                <div class="mdl-card__supporting-text">
-                    Login using your Google account here.
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                    <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" 
-                        name="provider" value="Google" title="Log in using your Google+ account">Login</button>
-                </div>
-            </div>
+            <externalLoginChannel sy-login-channel="Google" sy-login-message="Login with your Google account!"></externalLoginChannel>
         </div>
         
         <div class="mdl-cell mdl-cell--4-col">
-            <div class="login-card login-card-facebook mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand">
-                    <h2 class="mdl-card__title-text">Facebook</h2>
-                </div>
-                <div class="mdl-card__supporting-text">
-                    Login using your Facebook account here.
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                    <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" 
-                        name="provider" value="Facebook" title="Log in using your Facebook account">Login</button>
-                </div>
-            </div>
+            <externalLoginChannel sy-login-channel="Facebook" sy-login-message="Connect with your Facebook now."></externalLoginChannel>
         </div>
 
         <div class="mdl-cell mdl-cell--4-col">
-            <div class="login-card login-card-twitter mdl-card mdl-shadow--2dp">
-                <div class="mdl-card__title mdl-card--expand">
-                    <h2 class="mdl-card__title-text">Twitter</h2>
-                </div>
-                <div class="mdl-card__supporting-text">
-                    Login using your Twitter account here.
-                </div>
-                <div class="mdl-card__actions mdl-card--border">
-                    <button type="submit" class="btn btn-default mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" 
-                        name="provider" value="Twitter" title="Log in using your Twitter account">Login</button>
-                </div>
-            </div>
+            <externalLoginChannel sy-login-channel="Twitter" sy-login-message="Do you have Twitter account? Login now."></externalLoginChannel>
         </div>
     </div>
     
