--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 {
     <div class="feature-card feature-card-image-upload mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title mdl-card--expand">
-            <h2 class="mdl-card__title-text">Image</h2>
+            <h2 class="mdl-card__title-text"><label asp-for="File"></label></h2>
         </div>
         <div class="mdl-card__supporting-text">
             Please upload your image (JPG and PNG format only).
