--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using Seayo.Models.AccountViewModels
 @using Seayo.Models.ManageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Seayo
