--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -8,15 +8,14 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm">
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-            <a class="mdl-navigation__link" onclick="$('#logoutForm').submit();">Log out</a>
+            <a href="javascript:;" class="mdl-navigation__link" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a href="javascript:;" class="mdl-navigation__link" onclick="$('#logoutForm').submit();">Log out</a>
         </nav>
     </form>
 }
 else
 {
     <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
         <a class="mdl-navigation__link" asp-area="" asp-controller="Account" asp-action="Login">Log in</a>
     </nav>
 }
