--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -52,44 +52,38 @@
 
                     <div class="mdl-mega-footer__drop-down-section">
                         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                        <h1 class="mdl-mega-footer__heading">Features</h1>
+                        <h1 class="mdl-mega-footer__heading">References</h1>
                         <ul class="mdl-mega-footer__link-list">
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Terms</a></li>
-                            <li><a href="#">Partners</a></li>
-                            <li><a href="#">Updates</a></li>
+                            <li><a href="https://blogs.msdn.microsoft.com/webdev/2017/08/14/announcing-asp-net-core-2-0/" target="_blank">Announcing ASP.NET Core 2.0</a></li>
+                            <li><a href="https://www.microsoft.com/net/core#macos" target="_blank">Install .NET and build your first app on macOS</a></li>
+                            <li><a href="https://getmdl.io/started/index.html" target="_blank">Bower Installs Material Design</a></li>
+                            <li><a href="https://stackoverflow.com/questions/33064164/usesqlserver-method-missing-mvc-6" target="_blank">UseSqlServer method missing MVC 6</a></li>
                         </ul>
                     </div>
 
                     <div class="mdl-mega-footer__drop-down-section">
                         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                        <h1 class="mdl-mega-footer__heading">Details</h1>
+                        <h1 class="mdl-mega-footer__heading">Tools</h1>
                         <ul class="mdl-mega-footer__link-list">
-                            <li><a href="#">Specs</a></li>
-                            <li><a href="#">Tools</a></li>
-                            <li><a href="#">Resources</a></li>
+                            <li><a href="https://www.nuget.org/packages/Microsoft.Extensions.SecretManager.Tools/2.0.0" target="_blank">[NuGet] Microsoft.Extensions.SecretManager.Tools</a></li>
+                            <li><a href="https://docs.microsoft.com/en-us/ef/core/providers/sql-server/" target="_blank">Microsoft SQL Server EF Core Database Provider</a></li>
+                            <li><a href="https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-develop-use-vscode" target="_blank">Use Visual Studio Code to Connect to MS SQL Server</a></li>
                         </ul>
                     </div>
 
                     <div class="mdl-mega-footer__drop-down-section">
                         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                        <h1 class="mdl-mega-footer__heading">Technology</h1>
+                        <h1 class="mdl-mega-footer__heading">About GCL Projects</h1>
                         <ul class="mdl-mega-footer__link-list">
-                            <li><a href="#">How it works</a></li>
-                            <li><a href="#">Patterns</a></li>
-                            <li><a href="#">Usage</a></li>
-                            <li><a href="#">Products</a></li>
-                            <li><a href="#">Contracts</a></li>
+                            <li><a href="https://goh-chunlin.github.io" target="_blank">Goh Chun Lin</a></li>
                         </ul>
                     </div>
 
                     <div class="mdl-mega-footer__drop-down-section">
                         <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                        <h1 class="mdl-mega-footer__heading">FAQ</h1>
+                        <h1 class="mdl-mega-footer__heading">Project</h1>
                         <ul class="mdl-mega-footer__link-list">
-                            <li><a href="#">Questions</a></li>
-                            <li><a href="#">Answers</a></li>
-                            <li><a href="#">Contact us</a></li>
+                            <li><a href="https://github.com/goh-chunlin/Seayo" target="_blank">Github Repo</a></li>
                         </ul>
                     </div>
 
@@ -98,8 +92,7 @@
                 <div class="mdl-mega-footer__bottom-section">
                     <div class="mdl-logo">Seayo</div>
                     <ul class="mdl-mega-footer__link-list">
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Privacy & Terms</a></li>
+                        <li><a href="http://dotnet.sg" target="_blank">Singapore .NET Developers Community</a></li>
                     </ul>
                 </div>
 
