Updated layout and hero banner.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,6 +39,9 @@
         </div>
     </div>
     
+} else {
+    <div style="height: 200px;">
+    </div>
 }
 
 <div id="action-message-toast" class="mdl-js-snackbar mdl-snackbar">
