--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,6 @@
                 <div class="mdl-mega-footer__middle-section">
 
                     <div class="mdl-mega-footer__drop-down-section">
-                        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
                         <h1 class="mdl-mega-footer__heading">References</h1>
                         <ul class="mdl-mega-footer__link-list">
                             <li><a href="https://blogs.msdn.microsoft.com/webdev/2017/08/14/announcing-asp-net-core-2-0/" target="_blank">Announcing ASP.NET Core 2.0</a></li>
@@ -62,7 +61,6 @@
                     </div>
 
                     <div class="mdl-mega-footer__drop-down-section">
-                        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
                         <h1 class="mdl-mega-footer__heading">Tools</h1>
                         <ul class="mdl-mega-footer__link-list">
                             <li><a href="https://www.nuget.org/packages/Microsoft.Extensions.SecretManager.Tools/2.0.0" target="_blank">[NuGet] Microsoft.Extensions.SecretManager.Tools</a></li>
@@ -72,17 +70,15 @@
                     </div>
 
                     <div class="mdl-mega-footer__drop-down-section">
-                        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
-                        <h1 class="mdl-mega-footer__heading">About GCL Projects</h1>
+                        <h1 class="mdl-mega-footer__heading"></h1>
                         <ul class="mdl-mega-footer__link-list">
-                            <li><a href="https://goh-chunlin.github.io" target="_blank">Goh Chun Lin</a></li>
                         </ul>
                     </div>
 
                     <div class="mdl-mega-footer__drop-down-section">
-                        <input class="mdl-mega-footer__heading-checkbox" type="checkbox" checked>
                         <h1 class="mdl-mega-footer__heading">Project</h1>
                         <ul class="mdl-mega-footer__link-list">
+                            <li><a href="https://goh-chunlin.github.io" target="_blank">Goh Chun Lin</a></li>
                             <li><a href="https://github.com/goh-chunlin/Seayo" target="_blank">Github Repo</a></li>
                         </ul>
                     </div>
