--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -63,5 +63,14 @@
             }());
         </script>
     }
+        <script>
+            (function() {
+                'use strict';
+                var snackbarContainer = document.querySelector('#action-message-toast');
+                var data = { message: 'Hallo!' };
 
+                setTimeout(function(){ snackbarContainer.MaterialSnackbar.showSnackbar(data); }, 1000);
+                
+            }());
+        </script>
 }
